--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
+    "@material-ui/core": "^4.12.3",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
     "react": "17.0.2",
